<resources>
    <string name="app_name">eContact</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Bienvenido</string>
    <string name="SERVIDOR_CONTACTCENTER">http://gesys-demo.e-contact.cl:8080/WS_IVRNodos/services</string>
    <string name="SERVIDOR_DATOS">http://gesys-demo.e-contact.cl:8080/WS_eBank/services</string>
    <string name="SERVIDOR_C2C">http://gesys-demo.e-contact.cl:8080/WS_C2C_Server/services</string>
    <!--<string name="SERVIDOR_DATOS">http://54.232.208.223:8080/wsdatademo</string> -->
    <string name="user">Usuario</string>
    <string name="password">Clave</string>
    <string name="login">Ingresar</string>
    <string name="celular">Celular</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cuenta">Cuenta Corriente</string>
    <string name="tarjeta">Tarjeta Crédito</string>
    <string name="credito">Crédito Hipotecario</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_chat_genesys">Chat</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_configuracion">Configuracion</string>
    <string name="title_activity_acciones">AccionesActivity</string>
    <string name="title_activity_callback">CallbackActivity</string>
    <string name="title_activity_agendamientos">AgendamientosActivity</string>
    <string name="title_activity_producto">ProductoActivity</string>
    <string name="title_activity_inicio_v2">Inicio_v2</string>
    <string name="title_activity_inicio2">Inicio2Activity</string>
    <string name="title_activity_menu_ivr">MenuIVRActivity</string>
    <string name="title_activity_chat_interactive">ChatInteractiveActivity</string>
</resources>
